fix visible UI, alerts still left

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -3,13 +3,15 @@
 
 /* Logo styles */
 #logo {
-    background-color: #f73b3b;
+    background-color: rgb(108, 232, 97);
+    /*background-color: #f73b3b;*/
     color: white;
 }
 
 /* Heading styles */
 h1 {
-    color: #f73b3b;
+    color: rgb(108, 232, 97);
+    /*color: #f73b3b;*/
 }
 body {
     background: #ddd url(bg.png);
@@ -17,7 +19,8 @@ body {
 }
 
 h1 {
-    color: #f73b3b;
+    color: rgb(108, 232, 97);
+    /*color: #f73b3b;*/
 }
 
 p {
